use bcrypt instead of argon2, cors
